--- a/package.json
+++ b/package.json
@@ -5,7 +5,14 @@
   "repository": "git@github.com:lukelyyeung/algo_everyday.git",
   "author": "lukelyyeung <luke@livebetter.dev>",
   "license": "MIT",
+  "scripts": {
+    "run:ts": "ts-node"
+  },
   "dependencies": {
     "@datastructures-js/priority-queue": "5"
+  },
+  "devDependencies": {
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
   }
 }
